# inf-extr

./: .gitignore  LICENSE  README.md  activate_venv.sh  environment.yml  poetry.toml  pyproject.toml  setup.sh
notebooks/: test.ipynb
notebooks/data_preprocessing/: 00_extracting_files.ipynb  00_intro.ipynb  00_preprocessing_old_project.ipynb  00_questions_files.ipynb  01_classifying_text_lines.ipynb  01_classifying_text_lines_tokens.ipynb  02_ms-classification.ipynb  02_ms-classification2.ipynb  03_medication_extraction.ipynb  03_mri-classification.ipynb  04_llama-finetune.ipynb  05_mri.ipynb  05_side-effects.ipynb
notebooks/diag-label_prediction/: medBERT-diag-label.ipynb
notebooks/line-label_prediction/: line-label_bert-base-multilingual-cased.ipynb  line-label_llama2.ipynb  line-label_llama2.ipynb.save  line-label_medBERT-finetuned.ipynb  line-label_medBERT.ipynb  line-label_model_comparison.ipynb  line-label_seq2seq-medbert.ipynb  line-label_seq2seq-roberta.ipynb
notebooks/llama2-finetune/: llama2-finetune.ipynb
notebooks/medication/: evaluation-medication-prompt.ipynb  medications.ipynb
src/: paths.py  utils.py
thesis/: line-label_line_results.csv  line-label_token_results.csv  medication_results_13b.csv  medication_results_7b.csv  medication_results_rule.csv  ms_pred_results_prompt13b.csv  ms_pred_results_prompt13b_no.csv  ms_pred_results_prompt7b.csv  presentation_examples.csv  presentation_examples_annotated.csv  se_lora_f1.csv  se_lora_precision.csv  se_lora_recall.csv  se_thesis7b_f1.csv  se_thesis7b_precision.csv  se_thesis7b_recall.csv
(+592 files in other folders)
