[tool.poetry]
name = "inf-extr"
version = "0.1.0"
description = "Master Thesis Egli Marc Structured Information Extraction from medical Reports"
authors = ["Marc Egli <eglimar@ethz.ch>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
jupyter = "^1.0.0"
torch = {version = "^2.2.1+cu121", source = "pytorch-cuda"}
torchvision = {version = "^0.17.1+cu121", source = "pytorch-cuda"}
torchaudio = {version = "^2.2.1+cu121", source = "pytorch-cuda"}
scikit-learn = "^1.4.1.post1"
matplotlib = "^3.8.3"
umap-learn = "^0.5.5"
pandas = "^2.2.1"
seaborn = "^0.13.2"
datasets = "^2.17.1"
transformers = "^4.38.1"
accelerate = "^0.27.2"
huggingface-hub = "^0.21.3"
sentencepiece = "^0.2.0"
bitsandbytes = "^0.42.0"
evaluate = "^0.4.1"
peft = "^0.9.0"
seqeval = "^1.2.2"
packaging = "^23.2"
ninja = "^1.11.1.1"
wheel = "^0.42.0"
setuptools = "^69.1.1"
outlines = "^0.0.34"
trl = "^0.7.11"
openpyxl = "^3.1.2"
bert-score = "^0.3.13"


[[tool.poetry.source]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
